--- a/water-quality-potability-ml.ipynb
+++ b/water-quality-potability-ml.ipynb
@@ -27,34 +27,237 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0c5b9519-62ef-4d06-8dd2-27a8000c1d0c",
+   "execution_count": 12,
+   "id": "156605ed-8ad8-485a-8da0-390fb9f5c3d1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git init"
+    "from sklearn.model_selection import train_test_split, StratifiedKFold, cross_validate\n",
+    "\n",
+    "from sklearn.pipeline import Pipeline #do automatically all imputer,scaler and model.\n",
+    "from sklearn.impute import SimpleImputer #handle missing value (mean,median,most_frequent)\n",
+    "from sklearn.preprocessing import StandardScaler #check range(mean is zero)\n",
+    "\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "from sklearn.metrics import accuracy_score, recall_score, f1_score, confusion_matrix, classification_report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "3603527c-bd7c-4875-85c2-179c6a3a8dce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "HEAD:\n",
+      "         ph    Hardness        Solids  Chloramines     Sulfate  Conductivity  \\\n",
+      "0       NaN  204.890455  20791.318981     7.300212  368.516441    564.308654   \n",
+      "1  3.716080  129.422921  18630.057858     6.635246         NaN    592.885359   \n",
+      "2  8.099124  224.236259  19909.541732     9.275884         NaN    418.606213   \n",
+      "3  8.316766  214.373394  22018.417441     8.059332  356.886136    363.266516   \n",
+      "4  9.092223  181.101509  17978.986339     6.546600  310.135738    398.410813   \n",
+      "\n",
+      "   Organic_carbon  Trihalomethanes  Turbidity  Potability  \n",
+      "0       10.379783        86.990970   2.963135           0  \n",
+      "1       15.180013        56.329076   4.500656           0  \n",
+      "2       16.868637        66.420093   3.055934           0  \n",
+      "3       18.436524       100.341674   4.628771           0  \n",
+      "4       11.558279        31.997993   4.075075           0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"water_potability.csv\")\n",
+    "\n",
+    "print(\"\\nHEAD:\")\n",
+    "print(df.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "02cc7eda-07fd-4bb2-8054-aad9e5ae3836",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SHAPE:\n",
+      " (3276, 10)\n",
+      "\n",
+      "COLUMNS:\n",
+      " Index(['ph', 'Hardness', 'Solids', 'Chloramines', 'Sulfate', 'Conductivity',\n",
+      "       'Organic_carbon', 'Trihalomethanes', 'Turbidity', 'Potability'],\n",
+      "      dtype='object')\n",
+      "\n",
+      "DTYPES:\n",
+      "ph                 float64\n",
+      "Hardness           float64\n",
+      "Solids             float64\n",
+      "Chloramines        float64\n",
+      "Sulfate            float64\n",
+      "Conductivity       float64\n",
+      "Organic_carbon     float64\n",
+      "Trihalomethanes    float64\n",
+      "Turbidity          float64\n",
+      "Potability           int64\n",
+      "dtype: object\n",
+      "\n",
+      "MISSING VALUES:\n",
+      "ph                 491\n",
+      "Hardness             0\n",
+      "Solids               0\n",
+      "Chloramines          0\n",
+      "Sulfate            781\n",
+      "Conductivity         0\n",
+      "Organic_carbon       0\n",
+      "Trihalomethanes    162\n",
+      "Turbidity            0\n",
+      "Potability           0\n",
+      "dtype: int64\n",
+      "\n",
+      "DESCRIBE:\n",
+      "                ph     Hardness        Solids  Chloramines      Sulfate  \\\n",
+      "count  2785.000000  3276.000000   3276.000000  3276.000000  2495.000000   \n",
+      "mean      7.080795   196.369496  22014.092526     7.122277   333.775777   \n",
+      "std       1.594320    32.879761   8768.570828     1.583085    41.416840   \n",
+      "min       0.000000    47.432000    320.942611     0.352000   129.000000   \n",
+      "25%       6.093092   176.850538  15666.690297     6.127421   307.699498   \n",
+      "50%       7.036752   196.967627  20927.833607     7.130299   333.073546   \n",
+      "75%       8.062066   216.667456  27332.762127     8.114887   359.950170   \n",
+      "max      14.000000   323.124000  61227.196008    13.127000   481.030642   \n",
+      "\n",
+      "       Conductivity  Organic_carbon  Trihalomethanes    Turbidity   Potability  \n",
+      "count   3276.000000     3276.000000      3114.000000  3276.000000  3276.000000  \n",
+      "mean     426.205111       14.284970        66.396293     3.966786     0.390110  \n",
+      "std       80.824064        3.308162        16.175008     0.780382     0.487849  \n",
+      "min      181.483754        2.200000         0.738000     1.450000     0.000000  \n",
+      "25%      365.734414       12.065801        55.844536     3.439711     0.000000  \n",
+      "50%      421.884968       14.218338        66.622485     3.955028     0.000000  \n",
+      "75%      481.792304       16.557652        77.337473     4.500320     1.000000  \n",
+      "max      753.342620       28.300000       124.000000     6.739000     1.000000  \n",
+      "\n",
+      "INFO:\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3276 entries, 0 to 3275\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column           Non-Null Count  Dtype  \n",
+      "---  ------           --------------  -----  \n",
+      " 0   ph               2785 non-null   float64\n",
+      " 1   Hardness         3276 non-null   float64\n",
+      " 2   Solids           3276 non-null   float64\n",
+      " 3   Chloramines      3276 non-null   float64\n",
+      " 4   Sulfate          2495 non-null   float64\n",
+      " 5   Conductivity     3276 non-null   float64\n",
+      " 6   Organic_carbon   3276 non-null   float64\n",
+      " 7   Trihalomethanes  3114 non-null   float64\n",
+      " 8   Turbidity        3276 non-null   float64\n",
+      " 9   Potability       3276 non-null   int64  \n",
+      "dtypes: float64(9), int64(1)\n",
+      "memory usage: 256.1 KB\n",
+      "\n",
+      "SAMPLE:\n",
+      "            ph    Hardness        Solids  Chloramines     Sulfate  \\\n",
+      "2089  7.744773  208.920340  27648.159653     5.622572  332.823799   \n",
+      "294   9.032661  121.441442  15618.170248     6.157491  372.927456   \n",
+      "574   7.157338  214.010101  23718.552011     3.924367  343.764377   \n",
+      "40         NaN  233.858996  11703.923907     4.599388  309.039320   \n",
+      "2418       NaN  116.905479  27151.312902    10.185348         NaN   \n",
+      "651   6.555439  195.157976  15405.496481     2.750837         NaN   \n",
+      "2638  8.018772  228.111463  27405.316212     6.491360         NaN   \n",
+      "3006  9.901931  206.746469  13180.677801     5.878835         NaN   \n",
+      "2872  6.357167  191.135512  14782.804221     6.154448         NaN   \n",
+      "1917  6.864917  170.827792  20464.772694     7.074063  365.941346   \n",
+      "\n",
+      "      Conductivity  Organic_carbon  Trihalomethanes  Turbidity  Potability  \n",
+      "2089    397.057474       12.486192        73.184557   5.016321           0  \n",
+      "294     390.657226       15.030315        63.125617   4.927218           1  \n",
+      "574     506.899657       15.446049              NaN   5.183622           0  \n",
+      "40      349.399633       18.338893        42.677465   3.510004           0  \n",
+      "2418    372.002319       13.507232        63.273696   3.516238           1  \n",
+      "651     436.278076       10.855263              NaN   3.792040           0  \n",
+      "2638    494.620441        8.716667        56.188852   4.356279           0  \n",
+      "3006    426.534807       14.321874        75.408754   4.226950           0  \n",
+      "2872    527.932636       18.863094        69.626325   5.222077           0  \n",
+      "1917    400.965270       14.003874        51.603004   4.493747           1  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"SHAPE:\\n\", df.shape)\n",
+    "print(\"\\nCOLUMNS:\\n\", df.columns)\n",
+    "\n",
+    "print(\"\\nDTYPES:\")\n",
+    "print(df.dtypes)\n",
+    "\n",
+    "print(\"\\nMISSING VALUES:\")\n",
+    "print(df.isna().sum())\n",
+    "\n",
+    "print(\"\\nDESCRIBE:\")\n",
+    "print(df.describe())\n",
+    "\n",
+    "print(\"\\nINFO:\")\n",
+    "df.info()\n",
+    "\n",
+    "print(\"\\nSAMPLE:\")\n",
+    "print(df.sample(10))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d44667d-8031-4d2f-b365-03ad6cbc4f19",
+   "id": "8ce18a4e-320c-4469-b610-412426bf4eb0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git add .\n",
-    "    "
+    "x = df.drop(\"Potability\",axis=1) #df.drop(columns=[\"Potability\"])\n",
+    "y = df[\"potability\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "696e1079-bceb-4c29-b368-c7a0c4b690d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch main\n",
+      "Your branch is up to date with 'origin/main'.\n",
+      "\n",
+      "Changes not staged for commit:\n",
+      "  (use \"git add <file>...\" to update what will be committed)\n",
+      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
+      "\tmodified:   water-quality-potability-ml.ipynb\n",
+      "\n",
+      "Untracked files:\n",
+      "  (use \"git add <file>...\" to include in what will be committed)\n",
+      "\twater_potability.csv\n",
+      "\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "!\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b378e2b6-31eb-4807-b950-8a8346951132",
+   "id": "cc5d2360-b432-480d-8fb0-30bb3db1c501",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "!gi"
-   ]
+   "source": []
   }
  ],
  "metadata": {
