--- a/water-quality-potability-ml.ipynb
+++ b/water-quality-potability-ml.ipynb
@@ -276,13 +276,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 64,
    "id": "b10edbdd-10ad-4389-982d-1806b7d54dc2",
    "metadata": {},
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    x, y, test_size=0.2, stratify=y, random_state=42\n",
+    "    x, y, test_size=0.1, stratify=y, random_state=42\n",
     ")\n",
     "\n",
     "#random_state → same split every time\n",
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 65,
    "id": "e7741ca0-616c-454e-85ad-c375b46f66e7",
    "metadata": {},
    "outputs": [],
@@ -302,8 +302,10 @@
     "lr_pipe = Pipeline([\n",
     "    (\"imputer\", SimpleImputer(strategy=\"mean\")), #fill missing\n",
     "    (\"scaler\", StandardScaler()), #scale data\n",
-    "    (\"model\", LogisticRegression(max_iter=500, class_weight=\"balanced\", random_state=42))\n",
-    "])\n",
+    "    (\"model\", LogisticRegression(max_iter=1500,solver=\"liblinear\", class_weight=\"balanced\", random_state=42))\n",
+    "]) \n",
+    "\n",
+    "# class_weight - Both classes are equally important, even if one appears less(improve Accuracy, Recall (minority), F1-score,Real usefulness)\n",
     "\n",
     "lr_pipe.fit(X_train, y_train)\n",
     "y_pred_lr = lr_pipe.predict(X_test)\n"
@@ -311,11 +313,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ccb29885-a90a-4041-b0c3-645aaf113f8e",
+   "execution_count": 67,
+   "id": "247db2a3-451e-46a5-a16f-40571d268f7d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.5426829268292683\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Accuracy:\", accuracy_score(y_test, y_pred_lr))\n",
+    "#print(\"Recall:\", recall_score(y_test, y_pred_lr))\n",
+    "#print(\"F1-score:\", f1_score(y_test, y_pred_lr))\n",
+    "#print(confusion_matrix(y_test, y_pred_lr))\n",
+    "#print(classification_report(y_test, y_pred_lr))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "51650be0-cb4e-4a21-a88f-1bfb6b4ce312",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'fit_time': array([0.11870885, 0.12155557, 0.1266768 , 0.10558844, 0.10494781]),\n",
+       " 'score_time': array([0.0161612 , 0.01534486, 0.01597881, 0.01455665, 0.01607728]),\n",
+       " 'test_accuracy': array([0.5945122 , 0.56335878, 0.60458015, 0.60916031, 0.58473282]),\n",
+       " 'test_recall': array([0.4921875 , 0.44705882, 0.4745098 , 0.44921875, 0.46484375]),\n",
+       " 'test_f1': array([0.48648649, 0.44357977, 0.48303393, 0.47325103, 0.46666667])}"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "scoring = {\"accuracy\": \"accuracy\", \"recall\": \"recall\", \"f1\": \"f1\"}\n",
+    "\n",
+    "cross_validate(lr_pipe, x, y, cv=cv, scoring=scoring)\n",
+    "cross_validate(dt_pipe, x, y, cv=cv, scoring=scoring)\n"
+   ]
   }
  ],
  "metadata": {
