--- a/water-quality-potability-ml.ipynb
+++ b/water-quality-potability-ml.ipynb
@@ -361,6 +361,101 @@
     "cross_validate(lr_pipe, x, y, cv=cv, scoring=scoring)\n",
     "cross_validate(dt_pipe, x, y, cv=cv, scoring=scoring)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "14df1efe-15a8-4186-afb2-697bd0371ab9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: in the working copy of 'water-quality-potability-ml.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git add ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "21471639-7281-4902-bf5c-3dafe56b5466",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main dd64701] check accuracy 0.5\n",
+      " 1 file changed, 54 insertions(+), 9 deletions(-)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git commit -m \"check accuracy 0.5\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "10124c71-6217-4b5c-a715-992fe8967c27",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/supun-pregeeth/water-quality-potability-ml.git\n",
+      "   e034567..dd64701  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git push"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87b2ef0a-f7a0-4271-a1b4-b7d6aa7ee365",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Accuracy :\", accuracy_score(y_test, y_pred))\n",
+    "print(\"Precision:\", precision_score(y_test, y_pred))\n",
+    "print(\"Recall   :\", recall_score(y_test, y_pred))\n",
+    "print(\"F1-score :\", f1_score(y_test, y_pred))\n",
+    "\n",
+    "print(\"\\nConfusion Matrix:\")\n",
+    "print(confusion_matrix(y_test, y_pred))\n",
+    "\n",
+    "print(\"\\nClassification Report:\")\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab69ab76-5a7d-45ae-ad73-383b058746d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git add ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1784aa2e-09f6-4f31-a31f-f018569abc5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!!git commit -m \"add f\""
+   ]
   }
  ],
  "metadata": {
