remove outliars and test

--- a/water-quality-potability-ml.ipynb
+++ b/water-quality-potability-ml.ipynb
@@ -696,26 +696,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 167,
    "id": "21fdf99c-2ee5-4288-8f29-a36a95d7f044",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'x_capped' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[165]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m X = x_std.copy()\n\u001b[32m      2\u001b[39m y = y.loc[X.index]   \u001b[38;5;66;03m# important: align y with remaining rows\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m X = \u001b[43mx_capped\u001b[49m.copy()\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# y stays same index\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmodel_selection\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n",
-      "\u001b[31mNameError\u001b[39m: name 'x_capped' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== LogisticRegression ===\n",
+      "Accuracy: 0.491\n",
+      "Recall:   0.5163\n",
+      "F1-score: 0.4451\n",
+      "Confusion Matrix:\n",
+      " [[111 123]\n",
+      " [ 74  79]]\n",
+      "\n",
+      "=== DecisionTree ===\n",
+      "Accuracy: 0.6357\n",
+      "Recall:   0.5817\n",
+      "F1-score: 0.558\n",
+      "Confusion Matrix:\n",
+      " [[157  77]\n",
+      " [ 64  89]]\n",
+      "\n",
+      "=== RandomForest ===\n",
+      "Accuracy: 0.6951\n",
+      "Recall:   0.3399\n",
+      "F1-score: 0.4685\n",
+      "Confusion Matrix:\n",
+      " [[217  17]\n",
+      " [101  52]]\n",
+      "\n",
+      "=== SVM ===\n",
+      "Accuracy: 0.6486\n",
+      "Recall:   0.5621\n",
+      "F1-score: 0.5584\n",
+      "Confusion Matrix:\n",
+      " [[165  69]\n",
+      " [ 67  86]]\n"
      ]
     }
    ],
    "source": [
     "X = x_std.copy()\n",
     "y = y.loc[X.index]   # important: align y with remaining rows\n",
-    "X = x_capped.copy()\n",
+    "\n",
     "# y stays same index\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
@@ -758,7 +785,7 @@
     "    ]),\n",
     "    \n",
     "    \"SVM\": Pipeline([\n",
-    "        (\"imputer\", SimpleImputer(strategy=\"median\", add_indicator=True)),\n",
+    "        (\"imputer\", SimpleImputer(strategy=\"mean\")),\n",
     "        (\"scaler\", StandardScaler()),\n",
     "        (\"model\", SVC(kernel=\"rbf\", class_weight=\"balanced\", probability=True, random_state=42))\n",
     "    ])\n",
@@ -781,8 +808,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 169,
    "id": "797ba9fb-9918-48f2-a7ba-93d33f80014e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git add ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "id": "e1ef0434-ddbc-4691-add0-7f7b09eac4a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main d5cbe00] remove outliars and test\n",
+      " 1 file changed, 426 insertions(+), 96 deletions(-)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git commit -m \"remove outliars and test\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "id": "6eb2fe99-5165-486b-8538-62834c3de0d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/supun-pregeeth/water-quality-potability-ml.git\n",
+      "   6199868..d5cbe00  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git push"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "id": "5bd9eabd-f152-405e-8891-9c7e9a22847f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "origin\thttps://github.com/supun-pregeeth/water-quality-potability-ml.git (fetch)\n",
+      "origin\thttps://github.com/supun-pregeeth/water-quality-potability-ml.git (push)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git remote -v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "id": "532ad6a0-dff2-4f0f-b41a-8e3d5601007b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* main\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git branch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "id": "c39231f5-441d-4a0d-bd58-89446bc80d68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "fatal: unable to access 'https://github.com/supun-pregeeth/water-quality-potability-ml.git/': Could not resolve host: github.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git push -u origin main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f02b7817-c940-4e82-91a9-890aada3036d",
    "metadata": {},
    "outputs": [],
    "source": []
